--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,43 @@
 
 # Built Visual Studio Code Extensions
 *.vsix
+
+.vscode/tasks.json
+
+codility/lesson00/lesson00TaskZ
+codility/lesson00/lesson00TaskZ.txt
+codility/lesson01/lesson01TaskA
+codility/lesson01/lesson01TaskA.txt
+codility/lesson02/lesson02TaskA
+codility/lesson02/lesson02TaskA.txt
+codility/lesson02/lesson02TaskB
+codility/lesson02/lesson02TaskB.txt
+codility/lesson03/lesson03TaskA
+codility/lesson03/lesson03TaskA.txt
+codility/lesson03/lesson03TaskB
+codility/lesson03/lesson03TaskB.txt
+codility/lesson03/lesson03TaskC
+codility/lesson03/lesson03TaskC.txt
+codility/lesson04/lesson04TaskA
+codility/lesson04/lesson04TaskA.txt
+codility/lesson04/lesson04TaskB
+codility/lesson04/lesson04TaskB.txt
+codility/lesson04/lesson04TaskC
+codility/lesson04/lesson04TaskC.txt
+codility/lesson04/lesson04TaskD
+codility/lesson04/lesson04TaskD.txt
+codility/lesson05/lesson05TaskA
+codility/lesson05/lesson05TaskA.txt
+codility/lesson05/lesson05TaskB
+codility/lesson05/lesson05TaskB.txt
+codility/lesson05/lesson05TaskC
+codility/lesson05/lesson05TaskC.txt
+codility/lesson05/lesson05TaskD
+codility/lesson05/lesson05TaskD.txt
+codility/lesson06/lesson06TaskA
+codility/lesson06/lesson06TaskA.txt
+codility/lesson06/lesson06TaskB
+codility/lesson06/lesson06TaskB.txt
+codility/lesson06/lesson06TaskC
+codility/lesson06/lesson06TaskC.txt
+codility/lesson06/lesson06TaskD
