--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,6 @@ codility/lesson06/lesson06TaskB.txt
 codility/lesson06/lesson06TaskC
 codility/lesson06/lesson06TaskC.txt
 codility/lesson06/lesson06TaskD
+.vscode/settings.json
+codility/lesson07/lesson07TaskA
+codility/lesson07/lesson07TaskA.txt
