--- a/.gitignore
+++ b/.gitignore
@@ -94,3 +94,7 @@ codility/lesson07/lesson07TaskA.dSYM/Contents/Resources/Relocations/aarch64/less
 codility/lesson07/lesson07TaskB.dSYM/Contents/Info.plist
 codility/lesson07/lesson07TaskB.dSYM/Contents/Resources/DWARF/lesson07TaskB
 codility/lesson07/lesson07TaskB.dSYM/Contents/Resources/Relocations/aarch64/lesson07TaskB.yml
+codility/lesson07/lesson07TaskB.txt
+codility/lesson07/lesson07TaskC
+codility/lesson07/lesson07TaskC.txt
+codility/lesson07/lesson07TaskD
