--- a/.gitignore
+++ b/.gitignore
@@ -98,3 +98,7 @@ codility/lesson07/lesson07TaskB.txt
 codility/lesson07/lesson07TaskC
 codility/lesson07/lesson07TaskC.txt
 codility/lesson07/lesson07TaskD
+codility/lesson07/lesson07TaskD.dSYM/Contents/Resources/Relocations/aarch64/lesson07TaskD.yml
+codility/lesson07/lesson07TaskD.dSYM/Contents/Resources/DWARF/lesson07TaskD
+codility/lesson07/lesson07TaskD.dSYM/Contents/Info.plist
+codility/lesson07/lesson07TaskD.txt
