--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,4 @@ codility/lesson07/lesson07TaskD.dSYM/Contents/Resources/Relocations/aarch64/less
 codility/lesson07/lesson07TaskD.dSYM/Contents/Resources/DWARF/lesson07TaskD
 codility/lesson07/lesson07TaskD.dSYM/Contents/Info.plist
 codility/lesson07/lesson07TaskD.txt
+hackerrank/fizzBuzzSampleTest
