--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,5 @@ codility/lesson07/lesson07TaskD.dSYM/Contents/Resources/DWARF/lesson07TaskD
 codility/lesson07/lesson07TaskD.dSYM/Contents/Info.plist
 codility/lesson07/lesson07TaskD.txt
 hackerrank/fizzBuzzSampleTest
+codility/lesson08/lesson08TaskA
+codility/lesson08/lesson08TaskA.txt
