--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,11 @@ codility/lesson07/lesson07TaskD.txt
 hackerrank/fizzBuzzSampleTest
 codility/lesson08/lesson08TaskA
 codility/lesson08/lesson08TaskA.txt
+codility/lesson08/lesson08TaskB
+codility/lesson08/lesson08TaskB.txt
+codility/lesson09/lesson09TaskA
+codility/lesson09/lesson09TaskA.txt
+codility/lesson09/lesson09TaskC
+codility/lesson09/lesson09TaskC.txt
+hackerrank/ibmAssessment
+hackerrank/ibmAssessment.txt
