microsoft coding assessment v2

--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,9 @@ codility/lesson10/lesson10TaskA.txt
 codility/lesson10/lesson10TaskA.dSYM/Contents/Info.plist
 codility/lesson10/lesson10TaskA.dSYM/Contents/Resources/DWARF/lesson10TaskA
 codility/lesson10/lesson10TaskA.dSYM/Contents/Resources/Relocations/aarch64/lesson10TaskA.yml
+microsoft/codingAssessmentA
+microsoft/codingAssessmentA.txt
+microsoft/codingAssessmentB
+microsoft/codingAssessmentB.txt
+microsoft/sampleTest
+microsoft/sampleTest.txt
