--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,11 @@ microsoft/codingAssessmentB
 microsoft/codingAssessmentB.txt
 microsoft/sampleTest
 microsoft/sampleTest.txt
+leetcode/easy/twoSum
+leetcode/easy/twoSum.txt
+leetcode/medium/maximumSubarray
+leetcode/medium/maximumSubarray.txt
+leetcode/medium/minimumRotatedArray
+leetcode/medium/minimumRotatedArray.txt
+leetcode/medium/productExceptSelf
+leetcode/medium/productExceptSelf.txt
