--- a/.gitignore
+++ b/.gitignore
@@ -152,3 +152,6 @@ leetcode/medium/cacheLRU
 leetcode/medium/nodePopulation
 leetcode/medium/subsets
 leetcode/medium/subsets.txt
+leetcode/medium/cacheLRU.dSYM/Contents/Info.plist
+leetcode/medium/cacheLRU.dSYM/Contents/Resources/DWARF/cacheLRU
+leetcode/medium/cacheLRU.dSYM/Contents/Resources/Relocations/aarch64/cacheLRU.yml
