--- a/.gitignore
+++ b/.gitignore
@@ -155,3 +155,5 @@ leetcode/medium/subsets.txt
 leetcode/medium/cacheLRU.dSYM/Contents/Info.plist
 leetcode/medium/cacheLRU.dSYM/Contents/Resources/DWARF/cacheLRU
 leetcode/medium/cacheLRU.dSYM/Contents/Resources/Relocations/aarch64/cacheLRU.yml
+leetcode/medium/searchRotatedSortedArray.txt
+leetcode/medium/searchRotatedSortedArray
