--- a/.gitignore
+++ b/.gitignore
@@ -157,3 +157,5 @@ leetcode/medium/cacheLRU.dSYM/Contents/Resources/DWARF/cacheLRU
 leetcode/medium/cacheLRU.dSYM/Contents/Resources/Relocations/aarch64/cacheLRU.yml
 leetcode/medium/searchRotatedSortedArray.txt
 leetcode/medium/searchRotatedSortedArray
+leetcode/medium/mostWaterContainer
+leetcode/medium/mostWaterContainer.txt
