--- a/.gitignore
+++ b/.gitignore
@@ -159,3 +159,9 @@ leetcode/medium/searchRotatedSortedArray.txt
 leetcode/medium/searchRotatedSortedArray
 leetcode/medium/mostWaterContainer
 leetcode/medium/mostWaterContainer.txt
+leetcode/medium/threeSume.cpp
+leetcode/medium/threeSume
+leetcode/medium/threeSume.txt
+leetcode/medium/threeSume.dSYM/Contents/Info.plist
+leetcode/medium/threeSume.dSYM/Contents/Resources/DWARF/threeSume
+leetcode/medium/threeSume.dSYM/Contents/Resources/Relocations/aarch64/threeSume.yml
