trees, graphs, etc

--- a/.gitignore
+++ b/.gitignore
@@ -165,3 +165,5 @@ leetcode/medium/threeSume.txt
 leetcode/medium/threeSume.dSYM/Contents/Info.plist
 leetcode/medium/threeSume.dSYM/Contents/Resources/DWARF/threeSume
 leetcode/medium/threeSume.dSYM/Contents/Resources/Relocations/aarch64/threeSume.yml
+leetcode/medium/threeSum.txt
+leetcode/medium/threeSum
