--- a/.gitignore
+++ b/.gitignore
@@ -167,3 +167,7 @@ leetcode/medium/threeSume.dSYM/Contents/Resources/DWARF/threeSume
 leetcode/medium/threeSume.dSYM/Contents/Resources/Relocations/aarch64/threeSume.yml
 leetcode/medium/threeSum.txt
 leetcode/medium/threeSum
+microsoft/test
+microsoft/test.dSYM/Contents/Info.plist
+microsoft/test.dSYM/Contents/Resources/DWARF/test
+microsoft/test.dSYM/Contents/Resources/Relocations/aarch64/test.yml
