--- a/.gitignore
+++ b/.gitignore
@@ -187,3 +187,5 @@ sony/evaluate
 sony/evaluate.dSYM/Contents/Info.plist
 sony/evaluate.dSYM/Contents/Resources/DWARF/evaluate
 sony/evaluate.dSYM/Contents/Resources/Relocations/aarch64/evaluate.yml
+hackerrank/ibm/assessment01/ibmAssessment
+hackerrank/ibm/assessment02/test01
