--- a/.gitignore
+++ b/.gitignore
@@ -189,3 +189,230 @@ sony/evaluate.dSYM/Contents/Resources/DWARF/evaluate
 sony/evaluate.dSYM/Contents/Resources/Relocations/aarch64/evaluate.yml
 hackerrank/ibm/assessment01/ibmAssessment
 hackerrank/ibm/assessment02/test01
+sony/source/evaluate.cpp
+sony/cmake_install.cmake
+sony/CMakeCache.txt
+sony/CTestTestfile.cmake
+sony/DartConfiguration.tcl
+sony/eval
+sony/Makefile
+sony/CMakeFiles/cmake.check_cache
+sony/CMakeFiles/CMakeConfigureLog.yaml
+sony/CMakeFiles/CMakeDirectoryInformation.cmake
+sony/CMakeFiles/CMakeRuleHashes.txt
+sony/CMakeFiles/Makefile.cmake
+sony/CMakeFiles/Makefile2
+sony/CMakeFiles/progress.marks
+sony/CMakeFiles/TargetDirectories.txt
+sony/CMakeFiles/3.30.3/CMakeCXXCompiler.cmake
+sony/CMakeFiles/3.30.3/CMakeDetermineCompilerABI_CXX.bin
+sony/CMakeFiles/3.30.3/CMakeSystem.cmake
+sony/CMakeFiles/3.30.3/CompilerIdCXX/CMakeCXXCompilerId.cpp
+sony/CMakeFiles/Continuous.dir/build.make
+sony/CMakeFiles/Continuous.dir/cmake_clean.cmake
+sony/CMakeFiles/Continuous.dir/compiler_depend.make
+sony/CMakeFiles/Continuous.dir/compiler_depend.ts
+sony/CMakeFiles/Continuous.dir/DependInfo.cmake
+sony/CMakeFiles/Continuous.dir/progress.make
+sony/CMakeFiles/ContinuousBuild.dir/build.make
+sony/CMakeFiles/ContinuousBuild.dir/cmake_clean.cmake
+sony/CMakeFiles/ContinuousBuild.dir/compiler_depend.make
+sony/CMakeFiles/ContinuousBuild.dir/compiler_depend.ts
+sony/CMakeFiles/ContinuousBuild.dir/DependInfo.cmake
+sony/CMakeFiles/ContinuousBuild.dir/progress.make
+sony/CMakeFiles/ContinuousConfigure.dir/build.make
+sony/CMakeFiles/ContinuousConfigure.dir/cmake_clean.cmake
+sony/CMakeFiles/ContinuousConfigure.dir/compiler_depend.make
+sony/CMakeFiles/ContinuousConfigure.dir/compiler_depend.ts
+sony/CMakeFiles/ContinuousConfigure.dir/DependInfo.cmake
+sony/CMakeFiles/ContinuousConfigure.dir/progress.make
+sony/CMakeFiles/ContinuousCoverage.dir/build.make
+sony/CMakeFiles/ContinuousCoverage.dir/cmake_clean.cmake
+sony/CMakeFiles/ContinuousCoverage.dir/compiler_depend.make
+sony/CMakeFiles/ContinuousCoverage.dir/compiler_depend.ts
+sony/CMakeFiles/ContinuousCoverage.dir/DependInfo.cmake
+sony/CMakeFiles/ContinuousCoverage.dir/progress.make
+sony/CMakeFiles/ContinuousMemCheck.dir/build.make
+sony/CMakeFiles/ContinuousMemCheck.dir/cmake_clean.cmake
+sony/CMakeFiles/ContinuousMemCheck.dir/compiler_depend.make
+sony/CMakeFiles/ContinuousMemCheck.dir/compiler_depend.ts
+sony/CMakeFiles/ContinuousMemCheck.dir/DependInfo.cmake
+sony/CMakeFiles/ContinuousMemCheck.dir/progress.make
+sony/CMakeFiles/ContinuousStart.dir/build.make
+sony/CMakeFiles/ContinuousStart.dir/cmake_clean.cmake
+sony/CMakeFiles/ContinuousStart.dir/compiler_depend.make
+sony/CMakeFiles/ContinuousStart.dir/compiler_depend.ts
+sony/CMakeFiles/ContinuousStart.dir/DependInfo.cmake
+sony/CMakeFiles/ContinuousStart.dir/progress.make
+sony/CMakeFiles/ContinuousSubmit.dir/build.make
+sony/CMakeFiles/ContinuousSubmit.dir/cmake_clean.cmake
+sony/CMakeFiles/ContinuousSubmit.dir/compiler_depend.make
+sony/CMakeFiles/ContinuousSubmit.dir/compiler_depend.ts
+sony/CMakeFiles/ContinuousSubmit.dir/DependInfo.cmake
+sony/CMakeFiles/ContinuousSubmit.dir/progress.make
+sony/CMakeFiles/ContinuousTest.dir/build.make
+sony/CMakeFiles/ContinuousTest.dir/cmake_clean.cmake
+sony/CMakeFiles/ContinuousTest.dir/compiler_depend.make
+sony/CMakeFiles/ContinuousTest.dir/compiler_depend.ts
+sony/CMakeFiles/ContinuousTest.dir/DependInfo.cmake
+sony/CMakeFiles/ContinuousTest.dir/progress.make
+sony/CMakeFiles/ContinuousUpdate.dir/build.make
+sony/CMakeFiles/ContinuousUpdate.dir/cmake_clean.cmake
+sony/CMakeFiles/ContinuousUpdate.dir/compiler_depend.make
+sony/CMakeFiles/ContinuousUpdate.dir/compiler_depend.ts
+sony/CMakeFiles/ContinuousUpdate.dir/DependInfo.cmake
+sony/CMakeFiles/ContinuousUpdate.dir/progress.make
+sony/CMakeFiles/eval.dir/build.make
+sony/CMakeFiles/eval.dir/cmake_clean.cmake
+sony/CMakeFiles/eval.dir/compiler_depend.internal
+sony/CMakeFiles/eval.dir/compiler_depend.make
+sony/CMakeFiles/eval.dir/compiler_depend.ts
+sony/CMakeFiles/eval.dir/depend.make
+sony/CMakeFiles/eval.dir/DependInfo.cmake
+sony/CMakeFiles/eval.dir/flags.make
+sony/CMakeFiles/eval.dir/link.txt
+sony/CMakeFiles/eval.dir/progress.make
+sony/CMakeFiles/Experimental.dir/build.make
+sony/CMakeFiles/Experimental.dir/cmake_clean.cmake
+sony/CMakeFiles/Experimental.dir/compiler_depend.make
+sony/CMakeFiles/Experimental.dir/compiler_depend.ts
+sony/CMakeFiles/Experimental.dir/DependInfo.cmake
+sony/CMakeFiles/Experimental.dir/progress.make
+sony/CMakeFiles/ExperimentalBuild.dir/build.make
+sony/CMakeFiles/ExperimentalBuild.dir/cmake_clean.cmake
+sony/CMakeFiles/ExperimentalBuild.dir/compiler_depend.make
+sony/CMakeFiles/ExperimentalBuild.dir/compiler_depend.ts
+sony/CMakeFiles/ExperimentalBuild.dir/DependInfo.cmake
+sony/CMakeFiles/ExperimentalBuild.dir/progress.make
+sony/CMakeFiles/ExperimentalConfigure.dir/build.make
+sony/CMakeFiles/ExperimentalConfigure.dir/cmake_clean.cmake
+sony/CMakeFiles/ExperimentalConfigure.dir/compiler_depend.make
+sony/CMakeFiles/ExperimentalConfigure.dir/compiler_depend.ts
+sony/CMakeFiles/ExperimentalConfigure.dir/DependInfo.cmake
+sony/CMakeFiles/ExperimentalConfigure.dir/progress.make
+sony/CMakeFiles/ExperimentalCoverage.dir/build.make
+sony/CMakeFiles/ExperimentalCoverage.dir/cmake_clean.cmake
+sony/CMakeFiles/ExperimentalCoverage.dir/compiler_depend.make
+sony/CMakeFiles/ExperimentalCoverage.dir/compiler_depend.ts
+sony/CMakeFiles/ExperimentalCoverage.dir/DependInfo.cmake
+sony/CMakeFiles/ExperimentalCoverage.dir/progress.make
+sony/CMakeFiles/ExperimentalMemCheck.dir/build.make
+sony/CMakeFiles/ExperimentalMemCheck.dir/cmake_clean.cmake
+sony/CMakeFiles/ExperimentalMemCheck.dir/compiler_depend.make
+sony/CMakeFiles/ExperimentalMemCheck.dir/compiler_depend.ts
+sony/CMakeFiles/ExperimentalMemCheck.dir/DependInfo.cmake
+sony/CMakeFiles/ExperimentalMemCheck.dir/progress.make
+sony/CMakeFiles/ExperimentalStart.dir/build.make
+sony/CMakeFiles/ExperimentalStart.dir/cmake_clean.cmake
+sony/CMakeFiles/ExperimentalStart.dir/compiler_depend.make
+sony/CMakeFiles/ExperimentalStart.dir/compiler_depend.ts
+sony/CMakeFiles/ExperimentalStart.dir/DependInfo.cmake
+sony/CMakeFiles/ExperimentalStart.dir/progress.make
+sony/CMakeFiles/ExperimentalSubmit.dir/build.make
+sony/CMakeFiles/ExperimentalSubmit.dir/cmake_clean.cmake
+sony/CMakeFiles/ExperimentalSubmit.dir/compiler_depend.make
+sony/CMakeFiles/ExperimentalSubmit.dir/compiler_depend.ts
+sony/CMakeFiles/ExperimentalSubmit.dir/DependInfo.cmake
+sony/CMakeFiles/ExperimentalSubmit.dir/progress.make
+sony/CMakeFiles/ExperimentalTest.dir/build.make
+sony/CMakeFiles/ExperimentalTest.dir/cmake_clean.cmake
+sony/CMakeFiles/ExperimentalTest.dir/compiler_depend.make
+sony/CMakeFiles/ExperimentalTest.dir/compiler_depend.ts
+sony/CMakeFiles/ExperimentalTest.dir/DependInfo.cmake
+sony/CMakeFiles/ExperimentalTest.dir/progress.make
+sony/CMakeFiles/ExperimentalUpdate.dir/build.make
+sony/CMakeFiles/ExperimentalUpdate.dir/cmake_clean.cmake
+sony/CMakeFiles/ExperimentalUpdate.dir/compiler_depend.make
+sony/CMakeFiles/ExperimentalUpdate.dir/compiler_depend.ts
+sony/CMakeFiles/ExperimentalUpdate.dir/DependInfo.cmake
+sony/CMakeFiles/ExperimentalUpdate.dir/progress.make
+sony/CMakeFiles/Nightly.dir/build.make
+sony/CMakeFiles/Nightly.dir/cmake_clean.cmake
+sony/CMakeFiles/Nightly.dir/compiler_depend.make
+sony/CMakeFiles/Nightly.dir/compiler_depend.ts
+sony/CMakeFiles/Nightly.dir/DependInfo.cmake
+sony/CMakeFiles/Nightly.dir/progress.make
+sony/CMakeFiles/NightlyBuild.dir/build.make
+sony/CMakeFiles/NightlyBuild.dir/cmake_clean.cmake
+sony/CMakeFiles/NightlyBuild.dir/compiler_depend.make
+sony/CMakeFiles/NightlyBuild.dir/compiler_depend.ts
+sony/CMakeFiles/NightlyBuild.dir/DependInfo.cmake
+sony/CMakeFiles/NightlyBuild.dir/progress.make
+sony/CMakeFiles/NightlyConfigure.dir/build.make
+sony/CMakeFiles/NightlyConfigure.dir/cmake_clean.cmake
+sony/CMakeFiles/NightlyConfigure.dir/compiler_depend.make
+sony/CMakeFiles/NightlyConfigure.dir/compiler_depend.ts
+sony/CMakeFiles/NightlyConfigure.dir/DependInfo.cmake
+sony/CMakeFiles/NightlyConfigure.dir/progress.make
+sony/CMakeFiles/NightlyCoverage.dir/build.make
+sony/CMakeFiles/NightlyCoverage.dir/cmake_clean.cmake
+sony/CMakeFiles/NightlyCoverage.dir/compiler_depend.make
+sony/CMakeFiles/NightlyCoverage.dir/compiler_depend.ts
+sony/CMakeFiles/NightlyCoverage.dir/DependInfo.cmake
+sony/CMakeFiles/NightlyCoverage.dir/progress.make
+sony/CMakeFiles/NightlyMemCheck.dir/build.make
+sony/CMakeFiles/NightlyMemCheck.dir/cmake_clean.cmake
+sony/CMakeFiles/NightlyMemCheck.dir/compiler_depend.make
+sony/CMakeFiles/NightlyMemCheck.dir/compiler_depend.ts
+sony/CMakeFiles/NightlyMemCheck.dir/DependInfo.cmake
+sony/CMakeFiles/NightlyMemCheck.dir/progress.make
+sony/CMakeFiles/NightlyMemoryCheck.dir/build.make
+sony/CMakeFiles/NightlyMemoryCheck.dir/cmake_clean.cmake
+sony/CMakeFiles/NightlyMemoryCheck.dir/compiler_depend.make
+sony/CMakeFiles/NightlyMemoryCheck.dir/compiler_depend.ts
+sony/CMakeFiles/NightlyMemoryCheck.dir/DependInfo.cmake
+sony/CMakeFiles/NightlyMemoryCheck.dir/progress.make
+sony/CMakeFiles/NightlyStart.dir/build.make
+sony/CMakeFiles/NightlyStart.dir/cmake_clean.cmake
+sony/CMakeFiles/NightlyStart.dir/compiler_depend.make
+sony/CMakeFiles/NightlyStart.dir/compiler_depend.ts
+sony/CMakeFiles/NightlyStart.dir/DependInfo.cmake
+sony/CMakeFiles/NightlyStart.dir/progress.make
+sony/CMakeFiles/NightlySubmit.dir/build.make
+sony/CMakeFiles/NightlySubmit.dir/cmake_clean.cmake
+sony/CMakeFiles/NightlySubmit.dir/compiler_depend.make
+sony/CMakeFiles/NightlySubmit.dir/compiler_depend.ts
+sony/CMakeFiles/NightlySubmit.dir/DependInfo.cmake
+sony/CMakeFiles/NightlySubmit.dir/progress.make
+sony/CMakeFiles/NightlyTest.dir/build.make
+sony/CMakeFiles/NightlyTest.dir/cmake_clean.cmake
+sony/CMakeFiles/NightlyTest.dir/compiler_depend.make
+sony/CMakeFiles/NightlyTest.dir/compiler_depend.ts
+sony/CMakeFiles/NightlyTest.dir/DependInfo.cmake
+sony/CMakeFiles/NightlyTest.dir/progress.make
+sony/CMakeFiles/NightlyUpdate.dir/build.make
+sony/CMakeFiles/NightlyUpdate.dir/cmake_clean.cmake
+sony/CMakeFiles/NightlyUpdate.dir/compiler_depend.make
+sony/CMakeFiles/NightlyUpdate.dir/compiler_depend.ts
+sony/CMakeFiles/NightlyUpdate.dir/DependInfo.cmake
+sony/CMakeFiles/NightlyUpdate.dir/progress.make
+sony/source/evaluate.dSYM/Contents/Info.plist
+sony/source/evaluate.dSYM/Contents/Resources/DWARF/evaluate
+sony/source/evaluate.dSYM/Contents/Resources/Relocations/aarch64/evaluate.yml
+sony/test/automatic_tests
+sony/test/cmake_install.cmake
+sony/test/CTestTestfile.cmake
+sony/test/Makefile
+sony/test/manual_tests
+sony/test/CMakeFiles/CMakeDirectoryInformation.cmake
+sony/test/CMakeFiles/progress.marks
+sony/test/CMakeFiles/automatic_tests.dir/build.make
+sony/test/CMakeFiles/automatic_tests.dir/cmake_clean.cmake
+sony/test/CMakeFiles/automatic_tests.dir/compiler_depend.make
+sony/test/CMakeFiles/automatic_tests.dir/compiler_depend.ts
+sony/test/CMakeFiles/automatic_tests.dir/depend.make
+sony/test/CMakeFiles/automatic_tests.dir/DependInfo.cmake
+sony/test/CMakeFiles/automatic_tests.dir/flags.make
+sony/test/CMakeFiles/automatic_tests.dir/link.txt
+sony/test/CMakeFiles/automatic_tests.dir/progress.make
+sony/test/CMakeFiles/manual_tests.dir/build.make
+sony/test/CMakeFiles/manual_tests.dir/cmake_clean.cmake
+sony/test/CMakeFiles/manual_tests.dir/compiler_depend.make
+sony/test/CMakeFiles/manual_tests.dir/compiler_depend.ts
+sony/test/CMakeFiles/manual_tests.dir/depend.make
+sony/test/CMakeFiles/manual_tests.dir/DependInfo.cmake
+sony/test/CMakeFiles/manual_tests.dir/flags.make
+sony/test/CMakeFiles/manual_tests.dir/link.txt
+sony/test/CMakeFiles/manual_tests.dir/progress.make
+sony/Testing/Temporary/CTestCostData.txt
+sony/Testing/Temporary/LastTest.log
