--- a/sony/test/CMakeLists.txt
+++ b/sony/test/CMakeLists.txt
@@ -1,16 +1,37 @@
 set(TEST_HEADERS 
     ${PROJECT_DIR}/include/operators.hpp 
-    ${PROJECT_DIR}/include/evaluate.hpp)
-set(TEST_INCLUDE_DIRS ${PROJECT_DIR}/include ${PROJECT_DIR}/test)
+    ${PROJECT_DIR}/include/evaluate.hpp
+    ${PROJECT_DIR}/test/include/map.hpp
+    ${PROJECT_DIR}/test/include/distributions.hpp
 
-add_executable(manual_tests 
+)
+set(TEST_INCLUDE_DIRS
+    ${PROJECT_DIR}/include
+    ${PROJECT_DIR}/test
+)
+
+add_executable(manual_tests
     manualTests.cpp
-    ${TEST_HEADERS})
-target_include_directories(manual_tests PUBLIC ${TEST_INCLUDE_DIRS})
-add_test(manual_tests, manual_tests)
+    ${TEST_HEADERS}
+)
+target_link_libraries(
+    manual_tests
+    GTest::gtest
+    GTest::gtest_main)
+add_test(
+    NAME manual_tests
+    COMMAND manual_tests
+)
 
-add_executable(automatic_tests 
+add_executable(automatic_tests
     automaticTests.cpp
-    ${TEST_HEADERS})
-target_include_directories(automatic_tests PUBLIC ${TEST_INCLUDE_DIRS})
-add_test(automatic_tests, automatic_tests)
+    ${TEST_HEADERS}
+)
+target_link_libraries(
+    automatic_tests
+    GTest::gtest
+    GTest::gtest_main)
+add_test(
+    NAME automatic_tests
+    COMMAND automatic_tests
+)
