--- a/.gitignore
+++ b/.gitignore
@@ -420,3 +420,22 @@ sony/source/evaluate
 sony/test/CMakeFiles/automatic_tests.dir/compiler_depend.internal
 sony/test/CMakeFiles/manual_tests.dir/compiler_depend.internal
 sony/Testing/Temporary/LastTestsFailed.log
+sony/README.md
+sony/source/shuntingYard
+sony/source/foo.dSYM/Contents/Info.plist
+sony/source/foo.dSYM/Contents/Resources/DWARF/foo
+sony/source/foo.dSYM/Contents/Resources/Relocations/aarch64/foo.yml
+sony/source/shuntingYard.dSYM/Contents/Info.plist
+sony/source/shuntingYard.dSYM/Contents/Resources/DWARF/shuntingYard
+sony/source/shuntingYard.dSYM/Contents/Resources/Relocations/aarch64/shuntingYard.yml
+sony/test/manual_SY_tests
+sony/test/CMakeFiles/manual_SY_tests.dir/build.make
+sony/test/CMakeFiles/manual_SY_tests.dir/cmake_clean.cmake
+sony/test/CMakeFiles/manual_SY_tests.dir/compiler_depend.internal
+sony/test/CMakeFiles/manual_SY_tests.dir/compiler_depend.make
+sony/test/CMakeFiles/manual_SY_tests.dir/compiler_depend.ts
+sony/test/CMakeFiles/manual_SY_tests.dir/depend.make
+sony/test/CMakeFiles/manual_SY_tests.dir/DependInfo.cmake
+sony/test/CMakeFiles/manual_SY_tests.dir/flags.make
+sony/test/CMakeFiles/manual_SY_tests.dir/link.txt
+sony/test/CMakeFiles/manual_SY_tests.dir/progress.make
