--- a/.gitignore
+++ b/.gitignore
@@ -439,3 +439,11 @@ sony/test/CMakeFiles/manual_SY_tests.dir/DependInfo.cmake
 sony/test/CMakeFiles/manual_SY_tests.dir/flags.make
 sony/test/CMakeFiles/manual_SY_tests.dir/link.txt
 sony/test/CMakeFiles/manual_SY_tests.dir/progress.make
+build/CMakeCache.txt
+build/.cmake/api/v1/query/client-vscode/query.json
+build/CMakeFiles/cmake.check_cache
+build/CMakeFiles/CMakeConfigureLog.yaml
+build/CMakeFiles/3.30.3/CMakeCXXCompiler.cmake
+build/CMakeFiles/3.30.3/CMakeDetermineCompilerABI_CXX.bin
+build/CMakeFiles/3.30.3/CMakeSystem.cmake
+build/CMakeFiles/3.30.3/CompilerIdCXX/CMakeCXXCompilerId.cpp
