windows/WSL fixes

--- a/.gitignore
+++ b/.gitignore
@@ -447,3 +447,13 @@ build/CMakeFiles/3.30.3/CMakeCXXCompiler.cmake
 build/CMakeFiles/3.30.3/CMakeDetermineCompilerABI_CXX.bin
 build/CMakeFiles/3.30.3/CMakeSystem.cmake
 build/CMakeFiles/3.30.3/CompilerIdCXX/CMakeCXXCompilerId.cpp
+build/CMakeFiles/CMakeOutput.log
+build/CMakeFiles/3.22.1/CMakeCXXCompiler.cmake
+build/CMakeFiles/3.22.1/CMakeDetermineCompilerABI_CXX.bin
+build/CMakeFiles/3.22.1/CMakeSystem.cmake
+build/CMakeFiles/3.22.1/CompilerIdCXX/CMakeCXXCompilerId.cpp
+sony/CMakeFiles/CMakeOutput.log
+sony/CMakeFiles/3.22.1/CMakeCXXCompiler.cmake
+sony/CMakeFiles/3.22.1/CMakeDetermineCompilerABI_CXX.bin
+sony/CMakeFiles/3.22.1/CMakeSystem.cmake
+sony/CMakeFiles/3.22.1/CompilerIdCXX/CMakeCXXCompilerId.cpp
