--- a/sony/CMakeLists.txt
+++ b/sony/CMakeLists.txt
@@ -1,10 +1,15 @@
-cmake_minimum_required(VERSION 3.30)
+cmake_minimum_required(VERSION 3.22)
 project(
     ExpressionParser,
     VERSION 1.0.0
     DESCRIPTION "Simple arithmetic expression parser"
     LANGUAGES CXX
-    )
+)
+
+message("-- CMAKE_SYSTEM_INFO_FILE: ${CMAKE_SYSTEM_INFO_FILE}")
+message("-- CMAKE_SYSTEM_NAME:      ${CMAKE_SYSTEM_NAME}")
+message("-- CMAKE_SYSTEM_PROCESSOR: ${CMAKE_SYSTEM_PROCESSOR}")
+message("-- CMAKE_SYSTEM:           ${CMAKE_SYSTEM}")
 
 set(PROJECT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 
@@ -15,9 +20,13 @@ set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_BUILD_TYPE Debug)
 
-SET(CMAKE_CXX_FLAGS
-    "-g -O3 -ffp-model=precise -std=c++23 -Wpedantic -pedantic-errors -Wall"
-)
+if (Apple)
+    SET(CMAKE_CXX_FLAGS
+        "-g -O3 -ffp-model=precise -std=c++23 -Wpedantic -pedantic-errors -Wall")
+else()
+    SET(CMAKE_CXX_FLAGS
+        "-g -O3 -std=c++23 -Wpedantic -pedantic-errors -Wall")
+endif()
 
 set(SOURCE
     source/evaluate.cpp
@@ -25,6 +34,14 @@ set(SOURCE
     include/evaluate.hpp
 )
 add_executable(eval ${SOURCE})
+
+if (UNIX)
+    set(CMAKE_THREAD_LIBS_INIT "-lpthread")
+    set(CMAKE_HAVE_THREADS_LIBRARY 1)
+    set(CMAKE_USE_WIN32_THREADS_INIT 0)
+    set(CMAKE_USE_PTHREADS_INIT 1)
+    set(THREADS_PREFER_PTHREAD_FLAG ON)
+endif()
 
 enable_testing()
 find_package(GTest REQUIRED)
