--- a/.gitignore
+++ b/.gitignore
@@ -457,3 +457,79 @@ sony/CMakeFiles/3.22.1/CMakeCXXCompiler.cmake
 sony/CMakeFiles/3.22.1/CMakeDetermineCompilerABI_CXX.bin
 sony/CMakeFiles/3.22.1/CMakeSystem.cmake
 sony/CMakeFiles/3.22.1/CompilerIdCXX/CMakeCXXCompilerId.cpp
+assessment/ibm/bfsShortestReach.cpp:Zone.Identifier
+assessment/ibm/ibmAssessment.cpp:Zone.Identifier
+assessment/microsoft/interviews/interviewNotes.md:Zone.Identifier
+assessment/microsoft/interviews/notes.md:Zone.Identifier
+assessment/microsoft/interviews/notesCoding.md:Zone.Identifier
+assessment/microsoft/interviews/notesDesing.md:Zone.Identifier
+assessment/microsoft/interviews/notesSTARS.md:Zone.Identifier
+assessment/sony/cmake_install.cmake
+assessment/sony/CMakeCache.txt
+assessment/sony/CTestTestfile.cmake
+assessment/sony/Makefile
+assessment/sony/CMakeFiles/cmake.check_cache
+assessment/sony/CMakeFiles/CMakeDirectoryInformation.cmake
+assessment/sony/CMakeFiles/CMakeOutput.log
+assessment/sony/CMakeFiles/Makefile.cmake
+assessment/sony/CMakeFiles/Makefile2
+assessment/sony/CMakeFiles/progress.marks
+assessment/sony/CMakeFiles/TargetDirectories.txt
+assessment/sony/CMakeFiles/3.22.1/CMakeCXXCompiler.cmake
+assessment/sony/CMakeFiles/3.22.1/CMakeDetermineCompilerABI_CXX.bin
+assessment/sony/CMakeFiles/3.22.1/CMakeSystem.cmake
+assessment/sony/CMakeFiles/3.22.1/CompilerIdCXX/CMakeCXXCompilerId.cpp
+assessment/sony/CMakeFiles/eval.dir/build.make
+assessment/sony/CMakeFiles/eval.dir/cmake_clean.cmake
+assessment/sony/CMakeFiles/eval.dir/compiler_depend.internal
+assessment/sony/CMakeFiles/eval.dir/compiler_depend.make
+assessment/sony/CMakeFiles/eval.dir/compiler_depend.ts
+assessment/sony/CMakeFiles/eval.dir/depend.make
+assessment/sony/CMakeFiles/eval.dir/DependInfo.cmake
+assessment/sony/CMakeFiles/eval.dir/flags.make
+assessment/sony/CMakeFiles/eval.dir/link.txt
+assessment/sony/CMakeFiles/eval.dir/progress.make
+assessment/sony/source/CMakeLists.txt
+assessment/sony/source/evaluate
+assessment/sony/test/automatic_tests
+assessment/sony/test/cmake_install.cmake
+assessment/sony/test/CTestTestfile.cmake
+assessment/sony/test/Makefile
+assessment/sony/test/manual_SY_tests
+assessment/sony/test/manual_tests
+assessment/sony/test/CMakeFiles/CMakeDirectoryInformation.cmake
+assessment/sony/test/CMakeFiles/progress.marks
+assessment/sony/test/CMakeFiles/automatic_tests.dir/build.make
+assessment/sony/test/CMakeFiles/automatic_tests.dir/cmake_clean.cmake
+assessment/sony/test/CMakeFiles/automatic_tests.dir/compiler_depend.internal
+assessment/sony/test/CMakeFiles/automatic_tests.dir/compiler_depend.make
+assessment/sony/test/CMakeFiles/automatic_tests.dir/compiler_depend.ts
+assessment/sony/test/CMakeFiles/automatic_tests.dir/depend.make
+assessment/sony/test/CMakeFiles/automatic_tests.dir/DependInfo.cmake
+assessment/sony/test/CMakeFiles/automatic_tests.dir/flags.make
+assessment/sony/test/CMakeFiles/automatic_tests.dir/link.txt
+assessment/sony/test/CMakeFiles/automatic_tests.dir/progress.make
+assessment/sony/test/CMakeFiles/manual_SY_tests.dir/build.make
+assessment/sony/test/CMakeFiles/manual_SY_tests.dir/cmake_clean.cmake
+assessment/sony/test/CMakeFiles/manual_SY_tests.dir/compiler_depend.internal
+assessment/sony/test/CMakeFiles/manual_SY_tests.dir/compiler_depend.make
+assessment/sony/test/CMakeFiles/manual_SY_tests.dir/compiler_depend.ts
+assessment/sony/test/CMakeFiles/manual_SY_tests.dir/depend.make
+assessment/sony/test/CMakeFiles/manual_SY_tests.dir/DependInfo.cmake
+assessment/sony/test/CMakeFiles/manual_SY_tests.dir/flags.make
+assessment/sony/test/CMakeFiles/manual_SY_tests.dir/link.txt
+assessment/sony/test/CMakeFiles/manual_SY_tests.dir/progress.make
+assessment/sony/test/CMakeFiles/manual_tests.dir/build.make
+assessment/sony/test/CMakeFiles/manual_tests.dir/cmake_clean.cmake
+assessment/sony/test/CMakeFiles/manual_tests.dir/compiler_depend.internal
+assessment/sony/test/CMakeFiles/manual_tests.dir/compiler_depend.make
+assessment/sony/test/CMakeFiles/manual_tests.dir/compiler_depend.ts
+assessment/sony/test/CMakeFiles/manual_tests.dir/depend.make
+assessment/sony/test/CMakeFiles/manual_tests.dir/DependInfo.cmake
+assessment/sony/test/CMakeFiles/manual_tests.dir/flags.make
+assessment/sony/test/CMakeFiles/manual_tests.dir/link.txt
+assessment/sony/test/CMakeFiles/manual_tests.dir/progress.make
+assessment/sony/Testing/Temporary/CTestCostData.txt
+assessment/sony/Testing/Temporary/LastTest.log
+assessment/sony/Testing/Temporary/LastTestsFailed.log
+hackerrank/hard/bfsShortestReach
