--- a/.gitignore
+++ b/.gitignore
@@ -595,3 +595,14 @@ assessment/thinkCell/test/CMakeFiles/test_B.dir/progress.make
 assessment/thinkCell/Testing/Temporary/CTestCostData.txt
 assessment/thinkCell/Testing/Temporary/LastTest.log
 assessment/thinkCell/Testing/Temporary/LastTestsFailed.log
+assessment/thinkCell/test/test_C
+assessment/thinkCell/test/CMakeFiles/test_C.dir/build.make
+assessment/thinkCell/test/CMakeFiles/test_C.dir/cmake_clean.cmake
+assessment/thinkCell/test/CMakeFiles/test_C.dir/compiler_depend.internal
+assessment/thinkCell/test/CMakeFiles/test_C.dir/compiler_depend.make
+assessment/thinkCell/test/CMakeFiles/test_C.dir/compiler_depend.ts
+assessment/thinkCell/test/CMakeFiles/test_C.dir/depend.make
+assessment/thinkCell/test/CMakeFiles/test_C.dir/DependInfo.cmake
+assessment/thinkCell/test/CMakeFiles/test_C.dir/flags.make
+assessment/thinkCell/test/CMakeFiles/test_C.dir/link.txt
+assessment/thinkCell/test/CMakeFiles/test_C.dir/progress.make
