--- a/.gitignore
+++ b/.gitignore
@@ -660,3 +660,12 @@ include/implementation/test/CMakeFiles/nodesTest.dir/progress.make
 include/implementation/Testing/Temporary/CTestCostData.txt
 include/implementation/Testing/Temporary/LastTest.log
 include/implementation/Testing/Temporary/LastTestsFailed.log
+include/implementation/CMakeFiles/CMakeConfigureLog.yaml
+include/implementation/CMakeFiles/3.30.3/CMakeCXXCompiler.cmake
+include/implementation/CMakeFiles/3.30.3/CMakeDetermineCompilerABI_CXX.bin
+include/implementation/CMakeFiles/3.30.3/CMakeSystem.cmake
+include/implementation/CMakeFiles/3.30.3/CompilerIdCXX/CMakeCXXCompilerId.cpp
+include/implementation/lists/linkedListImpl
+include/implementation/main.dSYM/Contents/Info.plist
+include/implementation/main.dSYM/Contents/Resources/DWARF/main
+include/implementation/main.dSYM/Contents/Resources/Relocations/aarch64/main.yml
