improved nodes & lists

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,7 +2,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "LLDB Debug - Build and debug active file",
+            "name": "LLDB - Build and debug active file",
             "type": "lldb",
             "request": "launch",
             "program": "${fileDirname}//${fileBasenameNoExtension}",
