linkedList test finished

--- a/.gitignore
+++ b/.gitignore
@@ -669,3 +669,13 @@ include/implementation/lists/linkedListImpl
 include/implementation/main.dSYM/Contents/Info.plist
 include/implementation/main.dSYM/Contents/Resources/DWARF/main
 include/implementation/main.dSYM/Contents/Resources/Relocations/aarch64/main.yml
+include/implementation/test/CMakeFiles/linkedListTest.dir/build.make
+include/implementation/test/CMakeFiles/linkedListTest.dir/cmake_clean.cmake
+include/implementation/test/CMakeFiles/linkedListTest.dir/compiler_depend.internal
+include/implementation/test/CMakeFiles/linkedListTest.dir/compiler_depend.make
+include/implementation/test/CMakeFiles/linkedListTest.dir/compiler_depend.ts
+include/implementation/test/CMakeFiles/linkedListTest.dir/depend.make
+include/implementation/test/CMakeFiles/linkedListTest.dir/DependInfo.cmake
+include/implementation/test/CMakeFiles/linkedListTest.dir/flags.make
+include/implementation/test/CMakeFiles/linkedListTest.dir/link.txt
+include/implementation/test/CMakeFiles/linkedListTest.dir/progress.make
